Fixed overflow of client header

--- a/components/02-molecules/visual-elements/teaser/list-teaser/project-list-teaser/_project-list-teaser.scss
+++ b/components/02-molecules/visual-elements/teaser/list-teaser/project-list-teaser/_project-list-teaser.scss
@@ -102,6 +102,7 @@
   @media screen and (min-width: $grid-breakpoint-md) {
     .client-projects__header {
       position: absolute;
+      max-width: 11rem; // Hacky, we should consider a refactoring of the whole component
     }
 
     .client-projects__client-name {
